fix: fix review comments
Signed-off-by: Kamil MARUT <kamil.marut@rte-france.com>